src/main/java/io/github/dsheirer/source/tuner/sdrplay/api/v3_07/sdrplay_api_h.java


    private static class sdrplay_api_Update {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_Update");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Update(HANDLE dev, sdrplay_api_TunerSelectT tuner, sdrplay_api_ReasonForUpdateT reasonForUpdate, sdrplay_api_ReasonForUpdateExtension1T reasonForUpdateExt1)
     * }
     */
    public static FunctionDescriptor sdrplay_api_Update$descriptor() {
        return sdrplay_api_Update.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Update(HANDLE dev, sdrplay_api_TunerSelectT tuner, sdrplay_api_ReasonForUpdateT reasonForUpdate, sdrplay_api_ReasonForUpdateExtension1T reasonForUpdateExt1)
     * }
     */
    public static MethodHandle sdrplay_api_Update$handle() {
        return sdrplay_api_Update.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Update(HANDLE dev, sdrplay_api_TunerSelectT tuner, sdrplay_api_ReasonForUpdateT reasonForUpdate, sdrplay_api_ReasonForUpdateExtension1T reasonForUpdateExt1)
     * }
     */
    public static MemorySegment sdrplay_api_Update$address() {
        return sdrplay_api_Update.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_Update(HANDLE dev, sdrplay_api_TunerSelectT tuner, sdrplay_api_ReasonForUpdateT reasonForUpdate, sdrplay_api_ReasonForUpdateExtension1T reasonForUpdateExt1)
     * }
     */
    public static int sdrplay_api_Update(MemorySegment dev, int tuner, int reasonForUpdate, int reasonForUpdateExt1) {
        var mh$ = sdrplay_api_Update.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_Update", dev, tuner, reasonForUpdate, reasonForUpdateExt1);
            }
            return (int)mh$.invokeExact(dev, tuner, reasonForUpdate, reasonForUpdateExt1);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_SwapRspDuoActiveTuner {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_SwapRspDuoActiveTuner");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoActiveTuner(HANDLE dev, sdrplay_api_TunerSelectT *currentTuner, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static FunctionDescriptor sdrplay_api_SwapRspDuoActiveTuner$descriptor() {
        return sdrplay_api_SwapRspDuoActiveTuner.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoActiveTuner(HANDLE dev, sdrplay_api_TunerSelectT *currentTuner, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static MethodHandle sdrplay_api_SwapRspDuoActiveTuner$handle() {
        return sdrplay_api_SwapRspDuoActiveTuner.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoActiveTuner(HANDLE dev, sdrplay_api_TunerSelectT *currentTuner, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static MemorySegment sdrplay_api_SwapRspDuoActiveTuner$address() {
        return sdrplay_api_SwapRspDuoActiveTuner.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoActiveTuner(HANDLE dev, sdrplay_api_TunerSelectT *currentTuner, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static int sdrplay_api_SwapRspDuoActiveTuner(MemorySegment dev, MemorySegment currentTuner, int tuner1AmPortSel) {
        var mh$ = sdrplay_api_SwapRspDuoActiveTuner.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_SwapRspDuoActiveTuner", dev, currentTuner, tuner1AmPortSel);
            }
            return (int)mh$.invokeExact(dev, currentTuner, tuner1AmPortSel);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_SwapRspDuoDualTunerModeSampleRate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_SwapRspDuoDualTunerModeSampleRate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoDualTunerModeSampleRate(HANDLE dev, double *currentSampleRate)
     * }
     */
    public static FunctionDescriptor sdrplay_api_SwapRspDuoDualTunerModeSampleRate$descriptor() {
        return sdrplay_api_SwapRspDuoDualTunerModeSampleRate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoDualTunerModeSampleRate(HANDLE dev, double *currentSampleRate)
     * }
     */
    public static MethodHandle sdrplay_api_SwapRspDuoDualTunerModeSampleRate$handle() {
        return sdrplay_api_SwapRspDuoDualTunerModeSampleRate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoDualTunerModeSampleRate(HANDLE dev, double *currentSampleRate)
     * }
     */
    public static MemorySegment sdrplay_api_SwapRspDuoDualTunerModeSampleRate$address() {
        return sdrplay_api_SwapRspDuoDualTunerModeSampleRate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoDualTunerModeSampleRate(HANDLE dev, double *currentSampleRate)
     * }
     */
    public static int sdrplay_api_SwapRspDuoDualTunerModeSampleRate(MemorySegment dev, MemorySegment currentSampleRate) {
        var mh$ = sdrplay_api_SwapRspDuoDualTunerModeSampleRate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_SwapRspDuoDualTunerModeSampleRate", dev, currentSampleRate);
            }
            return (int)mh$.invokeExact(dev, currentSampleRate);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_SwapRspDuoMode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_DOUBLE,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_SwapRspDuoMode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoMode(sdrplay_api_DeviceT *currDevice, sdrplay_api_DeviceParamsT **deviceParams, sdrplay_api_RspDuoModeT rspDuoMode, double sampleRate, sdrplay_api_TunerSelectT tuner, sdrplay_api_Bw_MHzT bwType, sdrplay_api_If_kHzT ifType, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static FunctionDescriptor sdrplay_api_SwapRspDuoMode$descriptor() {
        return sdrplay_api_SwapRspDuoMode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoMode(sdrplay_api_DeviceT *currDevice, sdrplay_api_DeviceParamsT **deviceParams, sdrplay_api_RspDuoModeT rspDuoMode, double sampleRate, sdrplay_api_TunerSelectT tuner, sdrplay_api_Bw_MHzT bwType, sdrplay_api_If_kHzT ifType, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static MethodHandle sdrplay_api_SwapRspDuoMode$handle() {
        return sdrplay_api_SwapRspDuoMode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SwapRspDuoMode(sdrplay_api_DeviceT *currDevice, sdrplay_api_DeviceParamsT **deviceParams, sdrplay_api_RspDuoModeT rspDuoMode, double sampleRate, sdrplay_api_TunerSelectT tuner, sdrplay_api_Bw_MHzT bwType, sdrplay_api_If_kHzT ifType, sdrplay_api_RspDuo_AmPortSelectT tuner1AmPortSel)
     * }
     */
    public static MemorySegment sdrplay_api_SwapRspDuoMode$address() {
        return sdrplay_api_SwapRspDuoMode.ADDR;
    }
